--- a/public/styles/media-settings.css
+++ b/public/styles/media-settings.css
@@ -6,6 +6,7 @@
 
   #header_and_tweets {
     flex-direction: column;
+    align-items: center;
   }
 
   header.profile {
@@ -19,7 +20,7 @@
 
   main.container {
     margin-top: 40px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 5vw;
+    margin-right: 1vw;
    }
 }
